Fixes missing gpg key ID

--- a/dupli.yml
+++ b/dupli.yml
@@ -278,7 +278,8 @@
       name: Define src_key_priv and passwordstore invocation
 
     - expect:
-        command: gpg2 --homedir {{ gnupg_homedir }} --export-secret-keys --armor --output {{ src_key_priv }}
+        command: >-
+          gpg2 --homedir {{ gnupg_homedir }} --export-secret-key --armor --output {{ src_key_priv }} {{ email }}
         responses:
           (?i)Passphrase: |
             {{ lookup('passwordstore', key_priv_pass) }}
