Adds missing commit for pass

--- a/dupli.yml
+++ b/dupli.yml
@@ -179,6 +179,28 @@
               GIT_SSH_COMMAND: 'ssh -i {{ git_ssh_key_file }}'
             delegate_to: localhost
 
+    - command: pass git ls-files -o --exclude-standard
+      <<: *pass
+      <<: *ro
+      delegate_to: localhost
+      register: untracked
+      name: Get untracked files list
+
+    - assert:
+        that: untracked.stdout_lines|length|int == 1
+        fail_msg: We should'nt have more than one new file to add and commit (the new pass)
+      when: untracked.stdout_lines|length|int
+      name: Check that we only have a single new file
+
+    - command: pass git {{ item }}
+      <<: *pass
+      delegate_to: localhost
+      when: untracked.stdout_lines|length|int
+      with_items:
+        - add .
+        - commit -m 'Adds {{ email }} via ansible'
+      name: Add GPG key
+
     - command: pass git rev-parse @
       <<: *pass
       <<: *ro
